--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <title>Frontend Mentor | QR code component</title>
 
   </head>
@@ -13,7 +13,7 @@
 
     <div class="card">
       <div class="image">
-        <img src="/images/image-qr-code.png" alt="qr-code">
+        <img src="image-qr-code.png" alt="qr-code">
       </div>
       <div class="info-text">
         <h2>Improve your front-end<br>skills by building projects</h2>
